kubernetes-orchestrations/pushgateway/pushgateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-pushgateway
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
        - prometheus-pushgateway.k8.ferlab.lan
  rules:
  - host: prometheus-pushgateway.k8.ferlab.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-pushgateway
            port:
              number: 9091
